--- a/multilinear/Cargo.toml
+++ b/multilinear/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 [dependencies]
 ark-ff = "0.5.0"
 ark-bn254 = "0.5.0"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "multilinear_benchmark"
+harness=false
