--- a/multilinear/Cargo.toml
+++ b/multilinear/Cargo.toml
@@ -8,8 +8,8 @@ ark-ff = "0.5.0"
 ark-bn254 = "0.5.0"
 
 [dev-dependencies]
-criterion = "0.3"
+criterion = { version = "0.4", features = ["html_reports"] }
 
 [[bench]]
-name = "multilinear_benchmark"
+name = "benchmark"
 harness=false
