--- a/univariate/Cargo.toml
+++ b/univariate/Cargo.toml
@@ -7,3 +7,10 @@ edition = "2021"
 [dependencies]
 ark-bn254 = "0.5.0"
 ark-ff = "0.5.0"
+
+[dev-dependencies]
+criterion = { version = "0.4", features = ["html_reports"] }
+
+[[bench]]
+name = "benchmark"
+harness=false
