mod: working on sumcheck

--- a/sum_check/Cargo.toml
+++ b/sum_check/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 ark-ff = "0.5.0"
 univariate = {path = "../univariate"}
+fiat_shamir = {path = "../fiat_shamir"}
+multilinear = {path = "../multilinear"}
+ark-bn254 = "0.5.0"
+sha3 = "0.10.8"
