--- a/univariate/Cargo.toml
+++ b/univariate/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 ark-bn254 = "0.5.0"
 ark-ff = "0.5.0"
+rand = "0.8.5"
 
 [dev-dependencies]
 criterion = { version = "0.4", features = ["html_reports"] }
