--- a/sum_check/Cargo.toml
+++ b/sum_check/Cargo.toml
@@ -10,3 +10,10 @@ fiat_shamir = {path = "../fiat_shamir"}
 multilinear = {path = "../multilinear"}
 ark-bn254 = "0.5.0"
 sha3 = "0.10.8"
+
+[dev-dependencies]
+criterion = { version = "0.4", features = ["html_reports"] }
+
+[[bench]]
+name = "benchmark"
+harness=false
