mod: working on sumcheck of f(b,c)

--- a/univariate/Cargo.toml
+++ b/univariate/Cargo.toml
@@ -11,6 +11,7 @@ rand = "0.8.5"
 
 [dev-dependencies]
 criterion = { version = "0.4", features = ["html_reports"] }
+field-tracker = { git = "https://github.com/sublinearlabs/field-tracker", branch = "main" }
 
 [[bench]]
 name = "benchmark"
